--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
               <label class="mr-sm-2" for="inlineFormCustomSelect">Cargar Mapa</label>
               <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="setexample">
                 <option value="0">Ex:</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-               
+                <option value="1">Camacho</option>
               </select>
             </div>
 
