--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 
           <div class="form-row align-items-center">
-              <div class="col-auto">
+              <div class="col-auto invisible">
               <label class="mr-sm-2" for="from">From</label>
               <select id="from-starting" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
             </div>
-            <div class="col-auto">
+            <div class="col-auto invisible">
               <label class="mr-sm-2" for="to">To</label>
               <select id="to-end" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
 
