--- a/index.html
+++ b/index.html
@@ -42,18 +42,15 @@
 
             <div class="form-row align-items-center">
               <div class="col-auto block" style="margin-top: 5px;">
-              <label class="mr-sm-2" for="inlineFormCustomSelect">Cargar Mapa</label>
+              <label class="mr-sm-2" for="inlineFormCustomSelect">Paso 1: Elegir Mapa</label>
               <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="setexample">
                 <option value="0">Ex:</option>
                 <option value="1">Camacho</option>
               </select>
           
-
-            <div class="col-auto block">
-              <button type="button" id="clearmap" class="btn btn-danger">Limpiar</button>
-            </div>
             <div class="col-auto">
-              <button type="button" id="getshortestroute" class="btn btn-success" title="find shortest path between nodes"> Empezar</button>
+              <label>Paso 2: Apretar boton</laber>
+              <button type="button" id="getshortestroute" class="btn btn-success" title="find shortest path between nodes">Empezar</button>
             </div>
           
               </div>
